gitops/apps/qbittorrent/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      securityContext:
        sysctls:
          - name: "net.ipv4.conf.all.src_valid_mark"
            value: "1"
      containers:
        - name: qbittorrent
          resources:
            requests:
              memory: 1800Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 1
          command:
            - /bin/bash
            - -c
            - cp /config/wireguard/wg0.conf.tmpl /config/wireguard/wg0.conf && init.sh
          securityContext:
            privileged: true
          image: binhex/arch-qbittorrentvpn
          ports:
            - containerPort: 8080
              name: qbittorrent
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: saved-movies
              mountPath: /bealv/hddb/saved_movies
            - name: config
              mountPath: /config
            - name: qbittorrent-secrets
              mountPath: "/config/wireguard/wg0.conf.tmpl"
              subPath: "wg0.conf"
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: saved-movies
          persistentVolumeClaim:
            claimName: saved-movies
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: qbittorrent-secrets
          secret:
            secretName: qbittorrent-secrets
