gitops/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: qbittorrent
  selector:
    app: qbittorrent
